--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,7 +68,7 @@ ul {
   height: 50px;
   border-radius: 50%;
   color: #4d4d4d;
-  background-color: #fff;
+  /* background-color: #fff; */
   transition: all 0.3s ease-in-out;
 }
 .example-2 .icon-content a:hover {
