--- a/styles/globals.css
+++ b/styles/globals.css
@@ -125,19 +125,19 @@ ul {
 
 /* Gaya untuk scrollbar */
 .custom-scrollbar::-webkit-scrollbar {
-  width: 0.3rem; /* Lebar scrollbar */
+  width: 0.3rem;
   height: 0.3rem;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-  background: transparent; /* Warna latar belakang track scrollbar */
+  background: transparent;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  @apply bg-sky-700; /* Warna thumb scrollbar */
-  border-radius: 10px; /* Radius untuk membuat thumb lebih bulat */
+  @apply bg-sky-700;
+  border-radius: 10px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #555; /* Warna thumb scrollbar saat di-hover */
+  background: #555;
 }
