--- a/styles/globals.css
+++ b/styles/globals.css
@@ -141,3 +141,21 @@ ul {
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.custom-scrollbar2::-webkit-scrollbar {
+  width: 0;
+  height: 0.1rem;
+}
+
+.custom-scrollbar2::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scrollbar2::-webkit-scrollbar-thumb {
+  @apply bg-sky-700;
+  border-radius: 20px;
+}
+
+.custom-scrollbar2::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
